--- a/fixtures/output/css.css
+++ b/fixtures/output/css.css
@@ -1,1 +1,11 @@
-test {}
+@media (max-width: 480px) {
+	.bd-examples {
+		margin-right: -0.75rem;
+		margin-left: -0.75rem;
+	}
+
+	.bd-examples > [class^="col-"] {
+		padding-right: 0.75rem;
+		padding-left: 0.75rem;
+	}
+}
